fix(perc-server-ui-cmp): replace class-level @SuppressWarnings with targeted fixes
The original PR #2107 (commit ... on fix/2033-resolve-javac-warnings-perc-server-ui-cmp)
added class-level @SuppressWarnings({...}) to 43 legacy Swing UI files
in modules/ServerUIComponents. Class-level suppression was forbidden per
project rule (suppress at method/field scope only).

This follow-up commit removes the class-level annotations and replaces
each suppression category with a targeted real fix or a scope-tight
suppression on the specific method or field:

- this-escape: moved @SuppressWarnings("this-escape") to the specific
  constructor that calls the overridable method (AbstractAction.putValue,
  JMenu.setMnemonic, JComponent.setEnabled, etc.). Class no longer
  suppresses the whole class.

- serial: added `private static final long serialVersionUID = 1L;` to
  serializable classes (PSMenu, PSPasswordField, UTBrowseButton,
  UTFixedButton, UTMultiLineCellRenderer, PSFocusBorder, PSAboutDialog,
  PSEditTablePanel, PSJTable, PSJTableWithTooltips, PSLabel, PSListBox,
  PSListPanel, PSPagingControl, PSPropertyPanel, PSSourceTargetListPanel,
  PSStackedPropertyPanel, UTStandardCommandPanel, PropertyTablePanel,
  PSFieldSelectionEditorDialog, PSSearchAdvancedPanel, PSSearchFieldEditor,
  PSSearchSimplePanel, PSPathLabel, UTMultiLineCellRenderer.UIResource,
  UTFixedCharTextField.LimitingDocument). Marked non-Serializable fields
  `transient` where appropriate (PSAboutDialog.AppletContext,
  PSCalendarButton non-serializable fields).

- removal: replaced `new Character(c)` with `Character.valueOf(c)` in
  PSAction to drop the deprecation-with-removal warning.

- rawtypes/unchecked on overridable Swing API methods (TableModel,
  ListCellRenderer, ListSelectionListener, etc.): added targeted
  @SuppressWarnings on the specific method signature, not on the class.

- varargs: changed to `Object[]` parameter form where applicable, with
  Javadoc noting the change.

42 files changed, 